# sec-data

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-jupyter.yml
docs/: _config.yml  _toc.yml  intro.md  requirements.txt  sec.ipynb
sec_data/: __init__.py  secData.py
